--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </div>
 <div id="g_id_onload"
-     data-client_id="DEINE_OAUTH_CLIENT_ID.apps.googleusercontent.com"
+     data-client_id="947263016085-f0qthk68aqom7df81oqlai1bqdfunbdb.apps.googleusercontent.com"
      data-callback="onGoogleSignIn"
      data-auto_prompt="false">
 </div>
@@ -91,5 +91,6 @@
   </div>
 </body>
 </html>
+
 
 
